fixed some vertical spacing with table and buttons

--- a/rh_stats/src/UI/css/Statistics.css
+++ b/rh_stats/src/UI/css/Statistics.css
@@ -139,10 +139,6 @@ body {
     line-height: 18px;
 }
 
-    
-.history-header {
-    margin: 4px 0 0 26px;
-}
 
 .updated-stats {
     font-size: 14px;
@@ -163,16 +159,15 @@ body {
     background-color: #F3F3F3;
     /* border: 2px red solid; */
     margin-top: 32px;
-    padding-top: 30px;
+    padding: 30px 0;
 }
 
 .history-container {
     margin: 0 56px;
-    /* border: 2px red solid; */
-
     background: #FFFFFF;
     border: 1px solid #CDCDCD;
     border-radius: 4px;
+    padding: 32px 0;
 }
 
 .history-categories {
@@ -191,7 +186,14 @@ body {
     border: 1px solid #222222;
     box-sizing: border-box;
     border-radius: 4px;
+    cursor: pointer;
 }
+
+    
+.history-header {
+    margin: 0 0 0 26px;
+}
+
 
 .inactive-category {
     background: #FFFFFF;
@@ -205,7 +207,7 @@ body {
 
 
 .table {
-    margin: 20px 26px;
+    margin: 20px 26px 0 26px;
     /* border: 1px blue solid; */
 }
 
@@ -224,7 +226,7 @@ hr {
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 21px;
+    line-height: 16px;
     
     display: flex;
     flex-grow: 1;
@@ -246,11 +248,12 @@ hr {
     flex-grow: 1;
     flex-wrap: wrap;
 
-    padding: 1.2em 0;
+    padding: 1em 0 0.8em 0; 
     overflow: hidden;
 
     /* border: 0; */
     background-color: white;
+    /* border: 1px blue solid; */
 }
 
 
@@ -269,6 +272,7 @@ hr {
     width: 10px;
     height: 40px;
     margin-left: 3px;
+    /* border: 1px red solid; */
 }
 
 .history-column-btn {
